created angular demo

--- a/AngularApp/src/app/app.component.html
+++ b/AngularApp/src/app/app.component.html
@@ -1,6 +1,1 @@
-<span>
-  <div class="half-left">
-    <webcam></webcam>
-  </div>
-  <div class="half-right"></div>
-</span>
+<app-demo></app-demo>
